# streamllm

./: .env  .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENT_MODIFICATION_REPORT.md  EXPERIMENT_RECONSTRUCTION_PLAN.md  My_TODO_LIST.md  OPTIMIZATION_GUIDE.md  README.MD  README_VAD_Segmenter.md  SRC_OPTIMIZATION_PLAN.md  SRC_OPTIMIZATION_REPORT.md  config.json  demo_audio_segmenter.py  generate_wav.py  main.py  orign_inference.py  package-lock.json  pyproject.toml  requirements.txt  run_streamaudio_segmenter_test.py  stream_input_cache.py  test_logging.py  test_simple_logging.py  test_streaming.py  test_streaming_asr.py
.claude/: settings.local.json
docs/: decisions.md  paper2_context.md
experiments/: DATASET_PLAN_A.md  DATA_PREPARATION_GUIDE.md  EXPERIMENT_CHECKLIST.md  EXPERIMENT_DESIGN.md  EXPERIMENT_IMPLEMENTATION_PLAN.md  README.md  UNIFIED_STANDARDS.md  __init__.py
experiments/analysis/: __init__.py  chart_generator.py  result_processor.py  run_analysis.py  statistical_analysis.py  statistical_analyzer.py  table_generator.py
experiments/configs/: default_config.json
experiments/data_preparation/: CS-Dialog_handle_guide.md  validate_data_format.py
experiments/implementation/: __init__.py  asr_scale_exp.py  audio_quality_exp.py  base_experiment.py  concurrent_performance_exp.py  exp1_core_comparison.py  exp2_length_analysis.py  exp3_asr_context.py  exp4_ablation_study.py  exp5_case_analysis.py  length_impact_exp.py  native_model_comparison_exp.py  (+2 more)
notebooks/: 00_test_program.ipynb  01_data_preprocessing.ipynb  02_asr_experiments.ipynb  03_llm_kv_cache_experiments.ipynb
offical_code/: text_inference.py
paper/: chapter1_draft.md  chapter2_draft.md  chapter3_part1_draft.md  chapter3_part2_draft.md  chapter4_draft.md  chapter5_draft.md  sketch.MD  table.MD  thesis-check.md  thesis-first.md  thesis-last.md  thesis-last.tex  thesis-modiffy-orign.md  thesis-modify1.md  thesis.md  thesis_outline.md
scripts/: __init__.py  evaluate_results.py  run_experiment.py
src/: config.py  run_streamllm_test.py  run_test_simple.py  run_test_simple.sh
(+162 files in other folders)
