[project]
name = "streamllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "openai-whisper>=20231106",
    "faster-whisper>=1.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.3",
    "numpy<2",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "silero-vad>=5.1.2",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.5",
    "transformers>=4.52.3",
    "nvidia-cublas-cu12==12.1.*",
    "nvidia-cuda-cupti-cu12==12.1.*",
    "nvidia-cuda-nvrtc-cu12==12.1.*",
    "nvidia-cuda-runtime-cu12==12.1.*",
    "nvidia-cudnn-cu12==9.1.0.*",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
torchvision = [
  { index = "pytorch-cu121" },
]
torchaudio = [
  { index = "pytorch-cu121" },
]



[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true 
